welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: illegal start of simple pattern
var while(!estSurBiscuit){avance();}
    ^Variables:3: error: '=' expected but ';' found.
prendBiscuit()
^